--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
